handle arbitrary number of spaces between keys and values

--- a/tests/test1.yml
+++ b/tests/test1.yml
@@ -1,7 +1,8 @@
 name : "Synthia"
 version : 0
 description : "Idris Package Manager"
-bdeps : - "lighyear"
-        - "eternal"
-        - "yaml"
+bdeps : 
+  - "lighyear"
+  - "eternal"
+  - "yaml"
 rdeps :
